--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/theme-dark.scss";
 
 .intro {
-  // margin-top: 3rem;
+  margin-top: 3rem;
   overflow: hidden;
   height: 100vh;
   position: relative;
