--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -1,35 +1,43 @@
 @import "../styles/theme-dark.scss";
 
 .intro {
-  margin-top: 3rem;
+  margin-top: -3rem;
   overflow: hidden;
-  height: 100vh;
-  position: relative;
-  background-color: $intro-color-bg;
-  background-image: url('../img/' + $intro-right-bottom-img);
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  background-size: 80% auto;
-  background-attachment: scroll;
-}
-
-.intro-overlay {
   width: 100vw;
   height: 100vh;
   position: relative;
-  z-index: 20;
   background-color: $intro-color-bg;
-  background-image: url('../img/' + $lr-logo-lights);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  background-attachment: scroll;
-  --animate-duration: 5s;
+  // background-image: url('../img/' + $intro-right-bottom-img);
+  // background-position: right bottom;
+  // background-repeat: no-repeat;
+  // background-size: 90% auto;
+  // background-attachment: scroll;
+}
+
+// .intro-overlay {
+//   width: 100vw;
+//   height: 100vh;
+//   position: relative;
+//   z-index: 20;
+//   background-color: $intro-color-bg;
+//   background-image: url('../img/' + $lr-logo-lights);
+//   background-position: center center;
+//   background-repeat: no-repeat;
+//   background-size: 100% auto;
+//   background-attachment: scroll;
+//   --animate-duration: 5s;
+// }
+.intro-circle {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: auto;
+  width: 85vw;
 }
 
 .intro-msg {
   font-family: $fontimpact;
-  font-size: 10vw;
+  font-size: 15vw;
   font-weight: bold;
   color: $intro-msg-color;
   position: absolute;
@@ -46,10 +54,28 @@
   left: 15vw;
 }
 
-@media (min-width: $mediaphonelandscape) { // 376
-  .intro {
-    background-size: 50vw auto;
+@media (min-width: $mediaphonelandscape) {
+  // 376
+  .intro-circle {
+    height: 80vh;
+    width: auto;
   }
+  .intro-msg {
+    font-size: 10vw;
+  }
+  .intro-words {
+    width: 40%;
+    bottom: 0;
+    left: 2vw;
+  }
+}
+
+@media (min-width: $mediatablet) {
+  // 735
+  .intro-circle {
+    width: 70vh;
+  }
+
   .intro-msg {
     font-size: 8vw;
   }
@@ -60,26 +86,14 @@
   }
 }
 
-@media (min-width: $mediatablet) { // 735
-  .intro {
-    background-size: 50vw auto;
+@media (min-width: 800px) {
+  // 800
+  .intro-circle {
+    width: 65vh;
+    margin-bottom: -5rem;
   }
   .intro-msg {
-    font-size: 8vw;
-  }
-  .intro-words {
-    width: 40%;
-    bottom: 0;
-    left: 2vw;
-  }
-}
-
-@media (min-width: $mediatabletlandscape) { // 767
-  .intro {
-    background-size: 50vw auto;
-  }
-  .intro-msg {
-    font-size: 8vw;
+    font-size: 12vw;
   }
   .intro-words {
     width: 40%;
@@ -88,8 +102,37 @@
   }
 }
 
-@media (min-width: $mediadesktoplarge) { // 1919px
+@media (min-width: 1100px) {
+  // 1100
+  .intro-circle {
+    width: 80vh;
+    margin-bottom: 0;
+  }
+  .intro-msg {
+    font-size: 10vw;
+  }
+  .intro-words {
+    width: 40%;
+    bottom: 3rem;
+    left: 7vw;
+  }
+}
+
+@media (min-width: 1600px) {
+  // 1600
+  .intro-circle {
+    width: 80vh;
+    margin-bottom: -1rem;
+  }
+}
+
+@media (min-width: $mediadesktoplarge) {
+  // 1919px
   .intro-msg {
     font-size: 6vw;
+  }
+  .intro-circle {
+    width: 65vh;
+    margin-bottom: -1rem;
   }
 }
