--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -14,8 +14,17 @@
 $toggle_height: 100vh;
 
 .navList {
-  opacity: 0.95;
+  opacity: 0.99;
+  overflow: hidden;
+  
   background-color: $color-accent-dark;
+  
+  background-image: url("../img/wordcloud.svg");
+  background-position: right 1rem bottom 6rem;
+  background-repeat: no-repeat;
+  background-size: 60vh auto;
+  background-attachment: scroll;
+
   width: 100%;
   height: $toggle_height;
   padding: 0.5rem 1rem;
@@ -23,9 +32,8 @@ $toggle_height: 100vh;
     display: block;
     text-align: left;
     height: 2rem;
-    padding: 0.2rem;
+    margin: 0.4rem;
     color: $color-fg;
-    text-decoration: none;
     font-size: 1.2rem;
   }
 }
@@ -62,7 +70,7 @@ $toggle_height: 100vh;
       background-position: center center;
       background-repeat: no-repeat;
       background-size: contain;
-      background-image: url('../img/lr-icon.svg');
+      background-image: url("../img/lr-icon.svg");
       width: 6rem;
       height: 100%;
       margin-left: 0.7rem;
@@ -79,10 +87,58 @@ $toggle_height: 100vh;
       background-position: center center;
       background-repeat: no-repeat;
       background-size: contain;
-      background-image: url('../img/menu-download.svg');
+      background-image: url("../img/menu-download.svg");
       width: 5rem;
       height: 100%;
       margin-right: 0.5rem;
     }
+  }
+}
+
+@media (min-width: $mediaphonelandscape) {
+  // 376
+  .navList a {
+    font-size: 1.4rem;
+    margin-bottom: 0.6rem;
+  }
+}
+
+@media (min-width: $mediatablet) {
+  // 735
+  .navList a {
+    font-size: 2rem;
+    margin-bottom: 0.8rem;
+  }
+}
+
+@media (min-width: 800px) {
+  // 800
+  .navList a {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  // 1100
+  .navList a {
+    font-size: 2.2rem;
+    margin-bottom: 1.2rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  // 1600
+  .navList a {
+    font-size: 2.5rem;
+    margin-bottom: 1.2rem;
+  }
+}
+
+@media (min-width: $mediadesktoplarge) {
+  // 1919px
+  .navList a {
+    font-size: 2.8rem;
+    margin-bottom: 2rem;
   }
 }
