--- a/src/components/food.module.scss
+++ b/src/components/food.module.scss
@@ -22,7 +22,7 @@ $lineheight: 4rem;
     white-space: nowrap;
     font-size: 3rem;
     line-height: $lineheight;
-    
+
     color: $food-cat-color;
     transform-origin: 0 $lineheight;
     transform: rotate(90deg) translateX(-$lineheight);
@@ -193,7 +193,7 @@ $lineheight: 4rem;
 .food,
 .foodleft {
   // @media
-  @media (min-width: $mediaphonelandscape) {
+  @media (min-width: $iphone376) {
     // 376px
     .group {
       font-size: 3rem;
@@ -203,14 +203,17 @@ $lineheight: 4rem;
     }
     .flavours {
       font-size: 1.3rem;
+      bottom: 10rem;
     }
     .contents {
       font-size: 1.3rem;
     }
+    .image {
+      width: 50%;
+    }
   }
 
-  @media (min-width: $mediatablet) {
-    // 735px
+  @media (min-width: $iphonePlusL736) {
     .group {
       font-size: 4rem;
     }
@@ -219,14 +222,17 @@ $lineheight: 4rem;
     }
     .flavours {
       font-size: 1.5rem;
+      bottom: 7rem;
     }
     .contents {
       font-size: 1.5rem;
     }
+    .image {
+      width: 40%;
+    }
   }
 
-  @media (min-width: $mediatabletlandscape) {
-    // 767px
+  @media (min-width: $ipadP768) {
     .group {
       font-size: 5rem;
     }
@@ -235,14 +241,55 @@ $lineheight: 4rem;
     }
     .flavours {
       font-size: 1.8rem;
+      bottom: 15rem;
     }
     .contents {
       font-size: 1.8rem;
     }
+    .image {
+      width: 65%;
+    }
   }
 
-  @media (min-width: $mediadesktoplarge) {
-    // 1919px
+  @media (min-width: $ipadProP834) {
+    .group {
+      font-size: 5rem;
+    }
+    .desc {
+      font-size: 2.2rem;
+    }
+    .flavours {
+      font-size: 1.8rem;
+      bottom: 15rem;
+    }
+    .contents {
+      font-size: 1.8rem;
+    }
+    .image {
+      width: 65%;
+    }
+  }
+
+  @media (min-width: $ipadProL1112) {
+    .group {
+      font-size: 5rem;
+    }
+    .desc {
+      font-size: 2.2rem;
+    }
+    .flavours {
+      font-size: 1.8rem;
+      bottom: 15rem;
+    }
+    .contents {
+      font-size: 1.8rem;
+    }
+    .image {
+      width: 35%;
+    }
+  }
+
+  @media (min-width: $ipadProL1366) {
     .group {
       font-size: 5rem;
     }
@@ -250,10 +297,34 @@ $lineheight: 4rem;
       font-size: 2.5rem;
     }
     .flavours {
-      font-size: 2rem;
+      font-size: 2.4rem;
+      bottom: 17rem;
     }
     .contents {
-      font-size: 2rem;
+      font-size: 2.4rem;
+    }
+    .image {
+      width: 40%;
+    }
+  }
+
+  @media (min-width: $desktopL1680) {
+    // 1919px
+    .group {
+      font-size: 5rem;
+    }
+    .desc {
+      font-size: 3rem;
+    }
+    .flavours {
+      font-size: 3rem;
+      bottom: 22rem;
+    }
+    .contents {
+      font-size: 3rem;
+    }
+    .image {
+      width: 30%;
     }
   }
 }
