--- a/src/components/sayso.module.scss
+++ b/src/components/sayso.module.scss
@@ -13,7 +13,7 @@
   font-size: 2rem;
   font-weight: bold;
   color: $sayso-color-title;
-  padding-top: 1.8rem;
+  padding-top: 3rem;
 }
 
 .social {
@@ -54,67 +54,113 @@
   padding-top: 0.8rem;
 }
 
-  // @media
-  @media (min-width: $mediaphonelandscape) {
-    // 376px
-    .title {
-      font-size: 3rem;
-    }
-    .quotes {
-      width: 50%;
-    }
-    .say {
-      font-size: 1.4rem;
-    }
-    .who {
-      font-size: 1.2rem;
-    }
+// @media
+@media (min-width: $iphone376) {
+  // 376px
+  .title {
+    font-size: 3rem;
   }
+  .quotes {
+    width: 50%;
+  }
+  .say {
+    font-size: 1.4rem;
+  }
+  .who {
+    font-size: 1.2rem;
+  }
+}
 
-  @media (min-width: $mediatablet) {
-    // 735px
-    .title {
-      font-size: 3rem;
-    }
-    .quotes {
-      width: 50%;
-    }
-    .say {
-      font-size: 1.4rem;
-    }
-    .who {
-      font-size: 1.2rem;
-    }
+@media (min-width: $iphonePlusP414) {
+  // 376px
+  .title {
+    font-size: 2rem;
   }
+  .quotes {
+    width: 80%;
+  }
+  .say {
+    font-size: 1.4rem;
+  }
+  .who {
+    font-size: 1.2rem;
+    margin-top: 0.6rem;
+  }
+}
 
-  @media (min-width: $mediatabletlandscape) {
-    // 767px
-    .title {
-      font-size: 3rem;
-    }
-    .quotes {
-      width: 50%;
-    }
-    .say {
-      font-size: 1.4rem;
-    }
-    .who {
-      font-size: 1.2rem;
-    }
+@media (min-width: $iphonePlusL736) {
+  .title {
+    font-size: 2.5rem;
   }
+  .quotes {
+    width: 70%;
+  }
+  .say {
+    font-size: 1.2rem;
+  }
+  .who {
+    font-size: 1rem;
+  }
+}
 
-  @media (min-width: $mediadesktoplarge) {
-    // 1919px
-    .title {
-      font-size: 3rem;
-    }
-    .quotes {
-      width: 50%;
-    }
-    .say {
-      font-size: 1.4rem;
-    }
-    .who {
-      font-size: 1.2rem;
-    }
+@media (min-width: $ipadP768) {
+  // 767px
+  .title {
+    font-size: 3rem;
   }
+  .quotes {
+    width: 70%;
+  }
+  .say {
+    font-size: 1.6rem;
+  }
+  .who {
+    font-size: 1.4rem;
+  }
+}
+
+@media (min-width: $ipadProP834) {
+  .title {
+    font-size: 3rem;
+  }
+  .quotes {
+    width: 70%;
+  }
+  .say {
+    font-size: 1.6rem;
+  }
+  .who {
+    font-size: 1.4rem;
+  }
+}
+
+@media (min-width: $ipadProL1366) {
+  .title {
+    font-size: 4rem;
+  }
+  .quotes {
+    width: 50%;
+  }
+  .say {
+    font-size: 1.8rem;
+  }
+  .who {
+    font-size: 1.4rem;
+  }
+}
+
+@media (min-width: $desktopL1680) {
+  // 1919px
+  .title {
+    font-size: 4rem;
+  }
+  .quotes {
+    width: 50%;
+  }
+  .say {
+    font-size: 2rem;
+  }
+  .who {
+    font-size: 1.5rem;
+  }
+}
