--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,11 +27,15 @@ a:active {
   text-decoration: none;
 }
 
-$mediaphonelandscape: 376px;
-$mediatablet: 735px;
-$mediatabletlandscape: 767px;
-$mediadesktop: 1023px;
-$mediadesktoplarge: 1919px;
+$iphone376: 374px;
+$iphonePlusP414: 413px;
+$iphonePlusL736: 735px;
+$ipadP768: 767px;
+$ipadProP834: 833px;
+$ipadL1024: 1023px;
+$ipadProL1112: 1111px;
+$ipadProL1366: 1365px;
+$desktopL1680: 1679px;
 
 // Animation configs. Dependency: animate.css.
 $transitionfadein: opacity 3s ease;
