--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -95,7 +95,7 @@ $toggle_height: 100vh;
   }
 }
 
-@media (min-width: $iphone376) {
+@media (min-width: $iphoneP375) {
   // 376
   .navList a {
     font-size: 1.4rem;
