--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,7 +27,8 @@ a:active {
   text-decoration: none;
 }
 
-$iphone376: 374px;
+$iphoneP375: 374px;
+$iphoneL667: 568px; // weird resolution
 $iphonePlusP414: 413px;
 $iphonePlusL736: 735px;
 $ipadP768: 767px;
