dropdown animate linear

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   overflow: hidden;
   width: 100%;
-  transition: height 0.5s ease-in-out;
+  transition: height 1s linear;
   // height: 3rem; // to be set as style in code for animation
 }
 
