--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/theme-dark.scss";
 
 .intro {
-  margin-top: -3rem;
+  margin-top: 0;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
