--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -121,3 +121,5 @@ $sayso-google-img: "google.svg";
 $top-left-align: 7vw;
 $top-intro-align: 4rem;
 $left-intro-align: 2rem;
+$bodypadding: 10vw;
+$bodyinside: 80vw;
