--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -3,7 +3,7 @@
 .intro {
   margin-top: 0;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   background-color: $intro-color-bg;
@@ -14,12 +14,12 @@
   bottom: 0;
   right: 0;
   z-index: auto;
-  width: 85vw;
+  width: 85%;
 }
 
 .intro-msg {
   font-family: $fontimpact;
-  font-size: 15vw;
+  font-size: 3rem;
   font-weight: bold;
   color: $intro-msg-color;
   position: absolute;
@@ -29,20 +29,20 @@
 }
 
 .intro-words {
-  width: 70vw;
+  width: 70%;
   height: auto;
   position: absolute;
   bottom: 47vh;
-  left: 15vw;
+  left: 15%;
 }
 
 @media (min-width: $iphoneP375) {
   .intro-circle {
-    width: 90vw;
+    width: 90%;
     height: auto;
   }
   .intro-msg {
-    font-size: 18vw;
+    font-size: 4rem;
   }
 }
 
@@ -52,7 +52,7 @@
     width: auto;
   }
   .intro-msg {
-    font-size: 12vw;
+    font-size: 4rem;
   }
 }
 
@@ -63,7 +63,7 @@
   }
 
   .intro-msg {
-    font-size: 9vw;
+    font-size: 4rem;
   }
 }
 
@@ -74,7 +74,7 @@
   }
 
   .intro-msg {
-    font-size: 12vw;
+    font-size: 5rem;
   }
 }
 
@@ -84,7 +84,7 @@
     margin-bottom: -5rem;
   }
   .intro-msg {
-    font-size: 12vw;
+    font-size: 5rem;
   }
 }
 
@@ -94,7 +94,7 @@
     margin-bottom: -5rem;
   }
   .intro-msg {
-    font-size: 12vw;
+    font-size: 6rem;
   }
 }
 
@@ -104,7 +104,17 @@
     margin-bottom: 0;
   }
   .intro-msg {
-    font-size: 10vw;
+    font-size: 7rem;
+  }
+}
+
+@media (min-width: $ipadProL1366) {
+  .intro-circle {
+    width: 80vh;
+    margin-bottom: 0;
+  }
+  .intro-msg {
+    font-size: 8rem;
   }
 }
 
@@ -115,6 +125,6 @@
     margin-bottom: -1rem;
   }
   .intro-msg {
-    font-size: 12vw;
+    font-size: 9rem;
   }
 }
