--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -104,6 +104,9 @@ $sayso-color-title: $color-fg;
 $sayso-color-say: $color-fresh-light;
 $sayso-color-who: scotch-color("fresh", "dark");
 
+// locations
+$locations-color-bg: $color-fg;
+
 // footer
 $footer-color-fg: $color-fg;
 $footer-color-bg: $color-bg;
