--- a/src/components/foods.module.scss
+++ b/src/components/foods.module.scss
@@ -139,10 +139,14 @@
     font-size: 5rem;
   }
   .foods-middle-cards {
-    top: 45vh;
+    top: 40vh;
   }
   .foods-more {
-    font-size: 1.5rem;
+    bottom: 10rem;
+    font-size: 2rem;
+  }
+  .card-image {
+    width: 100%;
   }
 }
 
@@ -154,7 +158,11 @@
     top: 50vh;
   }
   .foods-more {
+    bottom: 14rem;
     font-size: 2.5rem;
+  }
+  .card-image {
+    width: 100%;
   }
 }
 
@@ -166,7 +174,11 @@
     top: 50vh;
   }
   .foods-more {
+    bottom: 9rem;
     font-size: 2.4rem;
+  }
+  .card-image {
+    width: 80%;
   }
 }
 
