--- a/src/components/intro.module.scss
+++ b/src/components/intro.module.scss
@@ -4,7 +4,7 @@
   margin-top: 0;
   overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 3rem);
   position: relative;
   background-color: $intro-color-bg;
 }
@@ -81,7 +81,7 @@
 @media (min-width: $ipadProP834) {
   .intro-circle {
     width: 65vh;
-    margin-bottom: -5rem;
+    height: auto;
   }
   .intro-msg {
     font-size: 5rem;
@@ -91,7 +91,7 @@
 @media (min-width: $ipadL1024) {
   .intro-circle {
     width: 70vh;
-    margin-bottom: -5rem;
+    height: auto;
   }
   .intro-msg {
     font-size: 6rem;
@@ -100,7 +100,7 @@
 
 @media (min-width: $ipadProL1112) {
   .intro-circle {
-    width: 80vh;
+    width: 70vh;
     margin-bottom: 0;
   }
   .intro-msg {
