changed primary dark color

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -13,7 +13,7 @@ $toggle_height: 100vh;
   opacity: 0.99;
   overflow: hidden;
   
-  background-color: $color-accent-dark;
+  background-color: $color-primary-dark;
   
   background-image: url("../img/wordcloud.svg");
   background-position: right 1rem bottom 6rem;
