--- a/src/pages/beyourboss.module.scss
+++ b/src/pages/beyourboss.module.scss
@@ -1,12 +1,36 @@
 @import "../styles/theme-dark.scss";
 
 .beyourboss {
-  padding: 1.2rem;
-  h1 {
-    padding-bottom: 1rem;
+  padding: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.haybails {
+  p {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    padding: 0.2rem;
+    color: $color-fg;
+    background-color: $color-accent-light;
+
+    position: absolute;
+    top: 18rem;
+    left: 50%;
+    transform: translateX(-50%);
   }
+
   img {
     width: 100%;
     height: auto;
   }
+}
+
+.form {
+  width: 100%;
+  padding-top: 30rem;
 }
