--- a/src/components/eoiform.module.scss
+++ b/src/components/eoiform.module.scss
@@ -1,22 +1,22 @@
 @import "../styles/theme-dark.scss";
 
-fieldset {
-  background-color: $eiform-bg;
-}
 .formgrid {
-  width: 100%;
+  width: 80vw;
   padding: 1rem;
   display: grid;
-  grid-template-columns: 1fr 1rem 2fr;
-  grid-gap: 0.6rem;
+  grid-template-columns: 1fr;
+  grid-gap: 0.4rem;
   grid-auto-flow: dense;
   align-items: center;
 
-  background-color: $eiform-bg;
+  label,
+  input,
+  textarea {
+    align-self: start;
+  }
 
   label {
     font-size: 1.2rem;
-    padding: 0.5rem;
     user-select: none;
     cursor: pointer;
     color: $eiform-label-color;
@@ -35,18 +35,8 @@ fieldset {
     color: $eiform-input-text;
 
     width: auto;
-    margin: 0;
+    margin-bottom: 1rem;
     padding: 0.1rem 0.5rem;
-    grid-column: 2 / 4;
-  }
-
-  input:focus + label,
-  textarea:focus + label {
-    font-weight: 500;
-  }
-
-  textarea + label {
-    align-self: start;
   }
 
   input[type="submit"] {
@@ -73,3 +63,21 @@ legend {
   font-size: 2rem;
   padding: 1rem;
 }
+
+@media (min-width: $iphoneP375) {
+  .formgrid {
+    grid-template-columns: 1fr 4fr;
+  }
+
+  input,
+  textarea {
+    grid-column: 2 / 3;
+  }
+}
+
+@media (min-width: $ipadProL1112) {
+  .formgrid {
+    width: 60vw;
+  }  
+}
+
