--- a/src/pages/beyourboss.module.scss
+++ b/src/pages/beyourboss.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/theme-dark.scss";
 
 .beyourboss {
-  padding: 2rem;
+  padding: 0.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -11,17 +11,25 @@
 
 .haybails {
   p {
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 500;
     text-align: center;
     padding: 0.2rem;
-    color: $color-fg;
     background-color: $color-accent-light;
 
     position: absolute;
-    top: 18rem;
+    top: 6rem;
     left: 50%;
     transform: translateX(-50%);
+
+    a,
+    a:hover,
+    a:visited,
+    a:link,
+    a:active {
+      text-decoration: none;
+      color: $color-fg;
+    }
   }
 
   img {
@@ -30,7 +38,35 @@
   }
 }
 
-.form {
-  width: 100%;
-  padding-top: 30rem;
+// @media
+@media (min-width: $iphoneP375) {
+}
+
+@media (min-width: $iphoneL667) {
+}
+
+@media (min-width: $iphonePlusL736) {
+  .haybails {
+    p {
+      font-size: 2rem;
+      top: 8rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+}
+
+@media (min-width: $ipadP768) {
+}
+
+@media (min-width: $ipadProP834) {
+}
+
+@media (min-width: $ipadProL1112) {
+}
+
+@media (min-width: $ipadProL1366) {
+}
+
+@media (min-width: $desktopL1680) {
 }
