--- a/src/components/eoiform.module.scss
+++ b/src/components/eoiform.module.scss
@@ -5,7 +5,7 @@
   padding: 1rem;
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 0.4rem;
+  grid-gap: 0.2rem;
   grid-auto-flow: dense;
   align-items: center;
 
@@ -36,7 +36,7 @@
 
     width: auto;
     margin-bottom: 1rem;
-    padding: 0.1rem 0.5rem;
+    padding: 0.5rem;
   }
 
   input[type="submit"] {
@@ -67,6 +67,8 @@ legend {
 @media (min-width: $iphoneP375) {
   .formgrid {
     grid-template-columns: 1fr 4fr;
+    grid-gap: 0.4rem;
+    grid-auto-flow: dense;
   }
 
   input,
