--- a/src/components/locations.module.scss
+++ b/src/components/locations.module.scss
@@ -3,7 +3,7 @@
 .locations {
   overflow: hidden;
   position: relative;
-  background-color: white;
+  background-color: $locations-color-bg;
   padding: 2rem;
 
   .map {
