--- a/src/components/locations.module.scss
+++ b/src/components/locations.module.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   position: relative;
   background-color: $locations-color-bg;
-  padding: 2rem;
+  padding: 1rem;
 
   .map {
     width: 100%;
@@ -15,6 +15,7 @@
 
 .location {
   padding-top: 2rem;
+  font-size: 0.9rem;
   img {
     width: 100%;
     height: auto;
