--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -115,6 +115,9 @@ $footer-color-fg-dark: scotch-color("secondary", "dark");
 $footer-color-link: $color-fresh-dark;
 $footer-color-link-beboss: $color-fresh-light;
 
+// avout - gallery
+$about-gallery-bg: $color-primary-dark;
+
 // epression of interest form
 $eiform-legend: scotch-color("accent");
 $eiform-bg: "none";
